# smarter_ros2

smarter_bag/: package.xml  setup.cfg  setup.py
smarter_bag/config/: logfile_replay.config.rviz
smarter_bag/launch/: smarter_logfile.launch.xml  smarter_record.launch.xml  smarter_replay.launch.xml
smarter_bag/smarter_bag/: logfile_parser.py
smarter_hello_world/: package.xml  setup.cfg  setup.py
smarter_hello_world/smarter_hello_world/: smarter_hello_world.py
smarter_image_processing/: package.xml  setup.cfg  setup.py
smarter_image_processing/launch/: dual_viewers.launch.py  dual_viewers.launch.xml  dual_viewers_gray.launch.py  dual_viewers_gray.launch.xml
smarter_image_processing/smarter_image_processing/: gray_scale_converter.py
smarter_rviz/: package.xml  setup.cfg  setup.py
smarter_rviz/config/: turtlebot3.config.rviz
smarter_rviz/launch/: smarter_rviz.launch.py  smarter_rviz.launch.xml
smarter_tf2/: package.xml  setup.cfg  setup.py
smarter_tf2/config/: transforms.config.rviz
smarter_tf2/launch/: smarter_tf2.launch.xml
smarter_tf2/smarter_tf2/: broadcast_tf2.py  recive_tf2.py
