<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smarter_tf2</name>
  <version>0.0.1</version>
  <description>The smarter_tf2 package</description>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
